--- a/src/app/components/cadastro/cadastro.component.html
+++ b/src/app/components/cadastro/cadastro.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
-  Gestão Clientes  -  Criar Conta <span class="toolbar-spacer"> </span>
-  <button mat-raised-button color="warn" (click) = "login()" >Login</button>
+  Gestão Clientes - Criar Conta <span class="toolbar-spacer"> </span>
+  <button mat-raised-button color="warn" (click)="login()">Login</button>
 </mat-toolbar>
 
 <mat-grid-list cols="1">
@@ -34,7 +34,8 @@
         <p>Tudo pronto!</p>
         <div>
           <button mat-button matStepperPrevious>Voltar</button>
-          <button [disabled]="!formularioCadastro.valid" style="margin-left: 20px;" mat-raised-button color="warn" (click)="onSubmit(form)">Confirmar</button>
+          <button [disabled]="!formularioCadastro.valid" style="margin-left: 20px;" mat-raised-button color="warn"
+            (click)="onSubmit(form)">Confirmar</button>
         </div>
       </mat-step>
     </mat-vertical-stepper>
