--- a/src/app/components/cliente/cliente.component.html
+++ b/src/app/components/cliente/cliente.component.html
@@ -1,1 +1,66 @@
-<p>cliente works!</p>
+<div class="grid-container">
+  <div>
+    <button mat-raised-button color="primary" style="margin: 20px">
+      Novo Cliente
+      <mat-icon aria-hidden="false" aria-label="ADD icon">add</mat-icon>
+    </button>
+    <mat-form-field style="width: 30%; font-size: 12px" appearance="outline" dense>
+      <mat-label>Filtro</mat-label>
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filtro">
+    </mat-form-field>
+  </div>
+  <div class="mat-elevation-z8">
+    <div>
+      <table mat-table [dataSource]="clientes" class="full-width-table">
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef>#</th>
+          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        </ng-container>
+
+
+        <ng-container matColumnDef="nome">
+          <th mat-header-cell *matHeaderCellDef>Nome</th>
+          <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="rg">
+          <th mat-header-cell *matHeaderCellDef>RG</th>
+          <td mat-cell *matCellDef="let element"> {{element.rg}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="cpf">
+          <th mat-header-cell *matHeaderCellDef>CPF</th>
+          <td mat-cell *matCellDef="let element"> {{element.cpf}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="telefone">
+          <th mat-header-cell *matHeaderCellDef>Telefone</th>
+          <td mat-cell *matCellDef="let element"> {{element.telefone}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="dataNascimento">
+          <th mat-header-cell *matHeaderCellDef>Dt Nascimento</th>
+          <td mat-cell *matCellDef="let element"> {{element.dataNascimento}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef>Ações</th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-raised-button color="primary" (click)="openDialog(element)">
+              <mat-icon aria-hidden="false" aria-label="edit icon">edit</mat-icon>
+            </button>
+            <button mat-raised-button color="warn" (click)="deletar(element)" style="margin-left: 10px">
+              <mat-icon aria-hidden="false" aria-label="delete icon">delete</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    </div>
+
+
+  </div>
+</div>
