--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -20,8 +20,7 @@
         </mat-form-field>
       </div>
       <div class="form-group">
-        <button type="submit" mat-raised-button color="primary" style="margin-right: 20px;"> Login
-        </button>
+        <button type="submit" mat-raised-button color="primary" style="margin-right: 20px;"> Login</button>
         <button mat-raised-button color="warn" (click)="loadSignUp()"> Criar Conta </button>
       </div>
     </form>
