Add dialogues de alteração clientes e endereço

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
         </div>
       </div>
       <mat-divider></mat-divider>
-      <a mat-list-item routerLink="/criar-atividade" *ngIf="isLoggedIn$">
+      <a mat-list-item routerLink="/clientes" *ngIf="isLoggedIn$">
         <mat-icon>assignment</mat-icon>Clientes
       </a>
       <a mat-list-item routerLink="/exemplo" *ngIf="isLoggedIn$">
