--- a/src/app/components/cliente/cliente-dialogue/cliente-dialogue.component.html
+++ b/src/app/components/cliente/cliente-dialogue/cliente-dialogue.component.html
@@ -1,11 +1,10 @@
-<h1 mat-dialog-title *ngIf="!data.element">Adicionar Cliente</h1>
-<h1 mat-dialog-title *ngIf="data.element">Editar Dados do Cliente</h1>
-<form name="form" [formGroup]='formularioCliente'>
+<h1 mat-dialog-title>Dados Cliente</h1>
+<form [formGroup]="formularioCliente" name="form" #f="ngForm">
   <div class="row">
     <div class="col">
       <mat-form-field appearance="outline" style="width: 100%;">
         <mat-label>Nome do cliente</mat-label>
-        <input [(ngModel)]="cliente.nome" formControlName="nome" matInput placeholder="Nome" required>
+        <input formControlName="nome" matInput placeholder="Nome" required>
         <mat-icon matSuffix>person</mat-icon>
       </mat-form-field>
     </div>
@@ -14,14 +13,14 @@
     <div class="col">
       <mat-form-field appearance="outline">
         <mat-label>RG</mat-label>
-        <input [(ngModel)]="cliente.rg" formControlName="rg" matInput placeholder="RG" required>
+        <input formControlName="rg" matInput placeholder="RG" required>
         <mat-icon matSuffix>portrait</mat-icon>
       </mat-form-field>
     </div>
     <div class="col">
       <mat-form-field appearance="outline" style="width: 100%;">
         <mat-label>CPF</mat-label>
-        <input [(ngModel)]="cliente.cpf" formControlName="cpf" matInput placeholder="CPF" required>
+        <input formControlName="cpf" matInput placeholder="CPF" required>
         <mat-icon matSuffix> person_pin</mat-icon>
       </mat-form-field>
     </div>
@@ -30,23 +29,67 @@
     <div class="col">
       <mat-form-field appearance="outline">
         <mat-label>Telefone</mat-label>
-        <input [(ngModel)]="cliente.telefone" formControlName="telefone" matInput placeholder="Telefone" required>
+        <input formControlName="telefone" matInput placeholder="Telefone" required>
         <mat-icon matSuffix>phone</mat-icon>
       </mat-form-field>
     </div>
     <div class="col">
       <mat-form-field appearance="outline">
         <mat-label>Data Nascimento</mat-label>
-        <input [(ngModel)]="cliente.dataNascimento" matInput [matDatepicker]="picker" placeholder="Selecionar data">
+        <input matInput [matDatepicker]="picker" formControlName="dataNascimento"  placeholder="Selecionar data">
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
       </mat-form-field>
     </div>
   </div>
+
+  <h1>Endereço</h1>
+  <div class="row">
+    <div class="col">
+      <mat-form-field appearance="outline" style="width: 100%;">
+        <mat-label>Logradouro</mat-label>
+        <input formControlName="nomeEndereco" matInput placeholder="Nome" required>
+      </mat-form-field>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <mat-form-field appearance="outline">
+        <mat-label>Número</mat-label>
+        <input formControlName="numero" matInput placeholder="Numero" required>
+      </mat-form-field>
+    </div>
+    <div class="col">
+      <mat-form-field appearance="outline">
+        <mat-label>CEP</mat-label>
+        <input formControlName="cep" matInput placeholder="CEP" required>
+      </mat-form-field>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <mat-form-field appearance="outline">
+        <mat-label>Cidade</mat-label>
+        <input formControlName="cidade" matInput placeholder="Cidade" required>
+      </mat-form-field>
+    </div>
+    <div class="col">
+      <mat-form-field appearance="outline">
+        <mat-select placeholder="Estado" formControlName="estado">
+          <mat-option *ngFor="let estado of estados" [value]="estado.sigla">
+            {{ estado.nome }}
+          </mat-option>
+        </mat-select>
+        <mat-error *ngIf="formularioCliente.controls['estado'].hasError('required')">
+          Estado é <strong>obrigatório</strong>
+        </mat-error>
+      </mat-form-field>
+    </div>
+  </div>
 </form>
+
 
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Cancelar</button>
-  <button mat-raised-button color="primary" (click)="adicionar()" *ngIf="!data.element"> Salvar </button>
-  <button mat-raised-button color="primary" (click)="update(cliente)" *ngIf="data.element"> Salvar </button>
+  <button mat-raised-button color="primary" (click)="adicionar(form)" *ngIf="!data.element"> Salvar </button>
 </div>
