--- a/src/app/components/cliente/cliente-dialogue/cliente-dialogue.component.html
+++ b/src/app/components/cliente/cliente-dialogue/cliente-dialogue.component.html
@@ -6,6 +6,9 @@
         <mat-label>Nome do cliente</mat-label>
         <input formControlName="nome" matInput placeholder="Nome" required>
         <mat-icon matSuffix>person</mat-icon>
+        <mat-error *ngIf="formularioCliente.controls['nome'].hasError('required')">
+          Nome é <strong>obrigatório</strong>
+        </mat-error>
       </mat-form-field>
     </div>
   </div>
@@ -13,15 +16,21 @@
     <div class="col">
       <mat-form-field appearance="outline">
         <mat-label>RG</mat-label>
-        <input formControlName="rg" matInput placeholder="RG" required>
+        <input [textMask] = "{mask: rgMascara}" formControlName="rg" matInput placeholder="RG" required>
         <mat-icon matSuffix>portrait</mat-icon>
+        <mat-error *ngIf="formularioCliente.controls['rg'].hasError('required')">
+          RG é <strong>obrigatório</strong>
+        </mat-error>
       </mat-form-field>
     </div>
     <div class="col">
       <mat-form-field appearance="outline" style="width: 100%;">
         <mat-label>CPF</mat-label>
-        <input formControlName="cpf" matInput placeholder="CPF" required>
+        <input [textMask] = "{mask: cpfMascara}" formControlName="cpf" matInput placeholder="CPF" required>
         <mat-icon matSuffix> person_pin</mat-icon>
+        <mat-error *ngIf="formularioCliente.controls['cpf'].hasError('required')">
+          CPF é <strong>obrigatório</strong>
+        </mat-error>
       </mat-form-field>
     </div>
   </div>
@@ -29,16 +38,22 @@
     <div class="col">
       <mat-form-field appearance="outline">
         <mat-label>Telefone</mat-label>
-        <input formControlName="telefone" matInput placeholder="Telefone" required>
+        <input [textMask] = "{mask: telefoneMascara}" formControlName="telefone" matInput placeholder="Telefone" required>
         <mat-icon matSuffix>phone</mat-icon>
+        <mat-error *ngIf="formularioCliente.controls['telefone'].hasError('required')">
+          Telefone é <strong>obrigatório</strong>
+        </mat-error>
       </mat-form-field>
     </div>
     <div class="col">
       <mat-form-field appearance="outline">
         <mat-label>Data Nascimento</mat-label>
-        <input matInput [matDatepicker]="picker" formControlName="dataNascimento"  placeholder="Selecionar data">
+        <input matInput [matDatepicker]="picker" formControlName="dataNascimento"  placeholder="Selecionar data" required>
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
+        <mat-error *ngIf="formularioCliente.controls['dataNascimento'].hasError('required')">
+          Data de nascimento é <strong>obrigatória</strong>
+        </mat-error>
       </mat-form-field>
     </div>
   </div>
@@ -48,7 +63,7 @@
     <div class="col">
       <mat-form-field appearance="outline" style="width: 100%;">
         <mat-label>Logradouro</mat-label>
-        <input formControlName="nomeEndereco" matInput placeholder="Nome" required>
+        <input formControlName="nomeEndereco" matInput placeholder="Nome">
       </mat-form-field>
     </div>
   </div>
@@ -56,13 +71,13 @@
     <div class="col">
       <mat-form-field appearance="outline">
         <mat-label>Número</mat-label>
-        <input formControlName="numero" matInput placeholder="Numero" required>
+        <input formControlName="numero" matInput placeholder="Numero">
       </mat-form-field>
     </div>
     <div class="col">
-      <mat-form-field appearance="outline">
+      <mat-form-field appearance="outline" style="width: 100%;">
         <mat-label>CEP</mat-label>
-        <input formControlName="cep" matInput placeholder="CEP" required>
+        <input formControlName="cep" matInput placeholder="CEP">
       </mat-form-field>
     </div>
   </div>
@@ -70,19 +85,16 @@
     <div class="col">
       <mat-form-field appearance="outline">
         <mat-label>Cidade</mat-label>
-        <input formControlName="cidade" matInput placeholder="Cidade" required>
+        <input formControlName="cidade" matInput placeholder="Cidade">
       </mat-form-field>
     </div>
     <div class="col">
-      <mat-form-field appearance="outline">
+      <mat-form-field appearance="outline" style="width: 100%;">
         <mat-select placeholder="Estado" formControlName="estado">
           <mat-option *ngFor="let estado of estados" [value]="estado.sigla">
             {{ estado.nome }}
           </mat-option>
         </mat-select>
-        <mat-error *ngIf="formularioCliente.controls['estado'].hasError('required')">
-          Estado é <strong>obrigatório</strong>
-        </mat-error>
       </mat-form-field>
     </div>
   </div>
@@ -90,6 +102,6 @@
 
 
 <div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">Cancelar</button>
-  <button mat-raised-button color="primary" (click)="adicionar(form)" *ngIf="!data.element"> Salvar </button>
+  <button mat-button (click)="onNoClick()">Fechar</button>
+  <button [disabled]="!formularioCliente.valid" mat-raised-button color="primary" (click)="adicionar(form)" *ngIf="!data.element"> Salvar </button>
 </div>
