--- a/src/app/components/cliente/cliente.component.html
+++ b/src/app/components/cliente/cliente.component.html
@@ -39,14 +39,14 @@
 
         <ng-container matColumnDef="dataNascimento">
           <th mat-header-cell *matHeaderCellDef>Dt Nascimento</th>
-          <td mat-cell *matCellDef="let element"> {{element.dataNascimento}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.dataNascimento | date:"dd/MM/yyyy"}} </td>
         </ng-container>
 
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef>Ações</th>
           <td mat-cell *matCellDef="let element">
             <button mat-raised-button color="primary" (click)="openDialog(element)">
-              <mat-icon aria-hidden="false" aria-label="edit icon">edit</mat-icon>
+              <mat-icon aria-hidden="false" aria-label="edit icon">open_in_new</mat-icon>
             </button>
             <button mat-raised-button color="warn" (click)="deletar(element)" style="margin-left: 10px">
               <mat-icon aria-hidden="false" aria-label="delete icon">delete</mat-icon>
