--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <div *ngIf="!isLoggedIn$">
-  <router-outlet></router-outlet>
+  <router-outlet>
+    <div *ngIf="loaderService.isLoading | async" class="loader-container">
+      <mat-spinner style="top: 50%; left: 50%;"></mat-spinner>
+    </div>
+  </router-outlet>
 </div>
 
 <mat-sidenav-container class="sidenav-container" *ngIf="isLoggedIn$">
@@ -19,6 +23,11 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
+
+    <div *ngIf="loaderService.isLoading | async" class="loader-container">
+      <mat-spinner style="top: 50%; left: 50%;"></mat-spinner>
+    </div>
+
     <mat-toolbar color="primary">
       <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
         *ngIf="isHandset$ | async">
